Cherry-pick r266244. rdar://problem/69101147

REGRESSION (r264790): IndexedDB may abort transactions of in-memory databases
    https://bugs.webkit.org/show_bug.cgi?id=215855
    <rdar://problem/67418574>

    Reviewed by Youenn Fablet.

    Source/WebCore:

    We don't abort transactions on in-memory database before process suspension because they don't hold database
    file lock. Before r264790, only ephemeral session would use in-memory databases, so we only checked session. Now
    persistent session also uses in-memory databases for third-party storage, so we need to add another check.

    API test: IndexedDB.SuspendImminentlyForThirdPartyDatabases

    * Modules/indexeddb/server/IDBServer.cpp:
    (WebCore::IDBServer::IDBServer::stopDatabaseActivitiesOnMainThread):

    Tools:

    * TestWebKitAPI/Tests/WebKitCocoa/IndexedDBSuspendImminently.mm:
    (postResult):
    (catch):

    Canonical link: https://commits.webkit.org/228698@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266244 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.105@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267257 268f45cc-cd09-0410-ab3c-d52691b4dbfc